# self-improving-loop

./: .gitignore  .pre-commit-config.yaml  AGENT_DATA_STRATEGY.md  AUTO_EVOLUTION.md  AUTO_ROLLBACK_SUMMARY.md  CAPABILITY_MATRIX.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DAILY_SUMMARY_2026-02-24.md  DEVELOPER_GUIDE.md  EVOLUTION.md  EXTERNAL_REPRO.md  FAILOVER_GUIDE.md  FUTURE_IMPROVEMENTS.md  LAUNCH_COPY_BILINGUAL.md  LAUNCH_OBSERVATION_72H.md  LAUNCH_POST_SELF_IMPROVING_LOOP.md  MANIFEST.in  OPENSOURCE_CHECKLIST.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  PATCH_REPORT.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_AUTO.md  SELF_EVOLUTION_AGENT.md  SELF_IMPROVING_LOOP.md  SELF_IMPROVING_README.md  SELF_IMPROVING_SUMMARY.md  SHOW_HN_DRAFT.md  TASK_ROUTER.md  TUTORIAL.md  UNIFIED_ROUTER_GUIDE.md  USAGE.md  VALIDATION_GUIDE.md  __init__.py  __main__.py  (+57 more)
.github/ISSUE_TEMPLATE/: bug_report.md  external_repro_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  test.yml
_deprecated/: README.md  core_task_router.py  production_router.py  simple_router.py  task_router.py  unified_router.py
assets/demo/: self_improving_loop_demo.cast  self_improving_loop_demo.txt
benchmarks/: benchmark_report.json  overhead.py  run_benchmarks.py  startup_recovery.py
config/: task_rules.json
core/: agent_manager.py
demo/huggingface_space/: README.md  app.py  requirements.txt
docs/: AI_CODING_TOOL_FAILURE_NOTES.md  ANNOTATION_GUIDELINE.md  DISTRIBUTION_TARGETS_20260426.md  GEO_ANSWER_BANK.md  HERMES_SKILL_GUARD.md  LAUNCH_OBSERVATION_24H.md  RELEASE_EVENT_v0.1.1.md  RELEASE_PROCESS.md  RELEASE_REPLY_TEMPLATES_v0.1.1.md  agent_prompt_reliability_template.md
examples/: 01_basic_tracking.py  02_config_rollback.py  03_langgraph_adapter.py  04_yijing_strategy.py  05_langgraph_regression_guard.py  06_hermes_skill_regression_guard.py  README.md  agent_eval_cases.jsonl  basic_usage.py  langgraph_style_node.py  regression_rollback_demo.py  verify_agent_eval_cases.py  verify_regression_rollback_event_trail.py  wrap_existing_agent.py
runs/ops_check/product_distribution_pr4_pr7_20260517/: BLOCKED_GIT_STAGE_20260517.md  PRODUCT_DISTRIBUTION_CLOSEOUT.md  PR_SCOPE_SPLIT_REVIEW.md  STAGED_SCOPE_AUDIT.md  STAGE_AUTHORIZATION_PACKET.md  event_flow.jsonl  summary.json
self_improving_loop/: __init__.py  adapters.py  cli.py  core.py  notifier.py  rollback.py  threshold.py  time_utils.py  trace_store.py
self_improving_loop/yijing/: __init__.py  hexagram.py  lines.py  policies.py  strategy.py
src/self_improving_loop/: __init__.py  core.py  notifier.py  rollback.py  threshold.py  tracer.py
templates/: templates.json
tests/: test_agent_eval_cases.py  test_benchmarks.py  test_examples.py  test_extended.py  test_huggingface_space_demo.py  test_phase3_exceptions.py  test_rollback_integration.py  test_self_improving_loop.py  test_smoke.py
