[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-improving-loop"
version = "0.1.1"
description = "A hexagram-guided reliability loop for AI agents: trace runtime signals, choose guarded patches, and roll back regressions."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "TaijiOS maintainers", email = "yangfei222666-9@users.noreply.github.com" },
]
keywords = [
    "ai-agent",
    "ai-agents",
    "self-improving",
    "feedback-loop",
    "auto-rollback",
    "rollback",
    "adaptive-threshold",
    "agent-evolution",
    "llm-tooling",
    "autonomous-agents",
    "taijios",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
telegram = ["requests>=2.28"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=25.1,<26",
    "ruff>=0.15",
    "mypy>=1.19,<1.20",
    "pre-commit>=4.0",
    "build>=1.0",
    "twine>=6.0",
]

[project.scripts]
self-improving-loop = "self_improving_loop.cli:main"

[project.urls]
Homepage = "https://github.com/yangfei222666-9/self-improving-loop"
Repository = "https://github.com/yangfei222666-9/self-improving-loop"
Issues = "https://github.com/yangfei222666-9/self-improving-loop/issues"
"Parent Project" = "https://github.com/yangfei222666-9/taiji"

[tool.setuptools.packages.find]
include = ["self_improving_loop*"]

[tool.setuptools.package-data]
self_improving_loop = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    # Examples adjust sys.path so they can be run directly from a source checkout.
    "E402",
    # Black owns wrapping/formatting; keep ruff focused on real errors/imports.
    "E501",
    # Existing user-facing messages use a few harmless f-string constants.
    "F541",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = false
warn_unused_configs = true
disable_error_code = [
    # 0.1.x inherited code is not fully typed yet; keep mypy as a light smoke
    # gate instead of pretending the runtime has strict type guarantees.
    "arg-type",
    "assignment",
    "attr-defined",
]
